--- a/templates/kinsdb/UNIST/component-list.html
+++ b/templates/kinsdb/UNIST/component-list.html
@@ -123,6 +123,67 @@
                         </div>
                       </div>
                     </div>
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="{% url 'details-component' title='부식 저항성' %}" class="primary-link">기계적 부하에 대한 건전성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="{% url 'details-component' title='부식 저항성' %}" class="primary-link">미임계 유지<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+                        </div>
+                      </div>
+                    </div>
+
+
+
                   </div>
                 </div>
 
@@ -159,6 +220,129 @@
                         </div>
                       </div>
                     </div>
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">캐니스터 재료 특성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">주철용기 재료 조성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">주철용기 제원<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">구리용기 재료 조성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                        </div>
+                      </div>
+                    </div>
+
+
                   </div>
                 </div>
 
@@ -180,7 +364,7 @@
 
 <!-- Choice Js -->
 <script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
-<script src="{% static 'js/data-filter-unist.init.js' %}"></script>
+<script src="{% static 'js/data-filter-brnc.init.js' %}"></script>
 
 <!-- Candidate Js -->
 <script src="{% static 'js/pages/candidate.init.js' %}"></script>
