--- a/templates/kinsdb/UNIST/kbs-3.html
+++ b/templates/kinsdb/UNIST/kbs-3.html
@@ -58,7 +58,7 @@
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
 
-            <img src="{% static 'images/logo/kins-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/캐니스터.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='캐니스터' %}" class="btn btn-soft-primary">캐니스터</a>
             </div>
@@ -69,7 +69,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
-            <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/완충재.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='완충재' %}" class="btn btn-soft-primary">완충재</a>
             </div>
@@ -80,7 +80,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
-            <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/뒤채움재.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='뒤채움재' %}" class="btn btn-soft-primary">뒤채움재</a>
             </div>
@@ -91,7 +91,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
-            <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/플러그.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='플러그' %}" class="btn btn-soft-primary">플러그</a>
             </div>
@@ -102,7 +102,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
-            <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/마감재.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='마감재' %}" class="btn btn-soft-primary">마감재</a>
             </div>
@@ -113,7 +113,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card text-center mb-4">
           <div class="card-body px-4 py-5">
-            <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
+            <img src="{% static 'images/sites/지하공동.jpg' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
               <a href="{% url 'component' cmp='천연방벽 및 지하공동' %}" class="btn btn-soft-primary">천연방벽 및 지하공동</a>
             </div>
@@ -123,14 +123,6 @@
       <!--end col-->
     </div>
 
-  <div>
-    <h6><a href="{% url 'component' cmp='캐니스터' %}">캐니스터</a></h6>
-    <h6><a href="{% url 'component' cmp='완충재' %}">완충재</a></h6>
-    <h6><a href="{% url 'component' cmp='뒤채움재' %}">뒤채움재</a></h6>
-    <h6><a href="{% url 'component' cmp='플러그' %}">플러그</a></h6>
-    <h6><a href="{% url 'component' cmp='마감재' %}">마감재</a></h6>
-    <h6><a href="{% url 'component' cmp='천연방벽 및 지하공동' %}">천연방벽 및 지하공동</a></h6>
-  </div>
   </div>
   <!--end container-->
 </section>
