--- a/templates/kinsdb/UNIST/safety-detail.html
+++ b/templates/kinsdb/UNIST/safety-detail.html
@@ -17,13 +17,13 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4"> 국가별 Safety Case </h3>
+          <h3 class="mb-4"> {{ doc }} </h3>
           <div class="page-next">
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item"><a href="{% url 'unist' %}">규제사례 DB</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'safety' %}">Safety Case</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> 스웨덴 </li>
+                <li class="breadcrumb-item active" aria-current="page"> {{ doc }} </li>
               </ol>
             </nav>
           </div>
@@ -51,8 +51,111 @@
 
 <section class="section">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card side-bar">
 
 
+          <div class="candidate-profile-overview  card-body border-top p-4">
+            <h6 class="fs-17 fw-semibold mb-3">문서 정보</h6>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <div class="d-flex">
+                  <label class="text-dark">문서명</label>
+                  <div>
+                    <p class="text-muted mb-0">{{ doc }}</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="d-flex">
+                  <label class="text-dark">국가</label>
+                  <div>
+                    <p class="text-muted mb-0">스웨덴</p>
+                  </div>
+                </div>
+              </li>
+
+
+              <li>
+                <div class="d-flex">
+                  <label class="text-dark">단계</label>
+                  <div>
+                    <p class="text-muted mb-0">예비부지조사</p>
+                  </div>
+                </div>
+              </li>
+
+              <h6 class="fs-17 fw-semibold mt-4">목표</h6>
+              <li>
+                <div class="d-flex">
+                  <p class="text-muted mb-0">문헌조사 및 지질조사</p>
+              </li>
+              <h6 class="fs-17 fw-semibold mt-3">주요 검토항목</h6>
+              <li>
+                <div class="d-flex">
+                  <p class="text-muted mb-0">KBS-3 처분 개념 및 부지조사 작업</p>
+              </li>
+            </ul>
+          </div>
+
+
+          <!--end candidate-overview-->
+        </div>
+        <!--end card-->
+      </div>
+      <!--end col-->
+
+      <div class="col-lg-8">
+        <div class="card candidate-details ms-lg-4 mt-4 mt-lg-0">
+          <div class="card-body p-4 candidate-personal-detail">
+
+            <div class="mt-4 border-bottom pb-4">
+              <h5 class="fs-17 fw-bold mb-3">파일 다운로드</h5>
+              <ul class="profile-document list-unstyled mb-0">
+
+                <li>
+                  <div class="profile-document-list d-flex align-items-center mt-4 ">
+                    <div class="icon flex-shrink-0">
+                      <i class="uil uil-file"></i>
+                    </div>
+                    <div class="ms-3">
+                      <h6 class="fs-16 mb-0">
+                        {{ doc }}.pdf
+                      </h6>
+                      <p class="text-muted mb-0">32{{ doc.document.file.size|filesizeformat }}</p>
+                    </div>
+                    <div class="ms-auto">
+                      <a onclick=location.href="#" download="dark-logo" class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                    </div>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+            <div class="candidate-education-details mt-4 pt-3">
+              <h6 class="fs-17 fw-bold mb-0"> SUMMARY</h6>
+              <div class="candidate-education-content mt-4">
+                <p class="text-muted">요약 내용</p>
+              </div>
+            </div>
+            <!--end candidate-education-details-->
+
+          </div>
+          <!--end card-body-->
+        </div>
+        <!--end card-->
+
+        <div class="row">
+          <div class="col-lg-10">
+          </div>
+          <div class="col-lg-2 mt-4">
+            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'safety' %}">목록</button>
+          </div>
+        </div>
+      </div>
+      <!--end col-->
+    </div>
     <!--end row-->
   </div>
   <!--end container-->
