--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -134,12 +134,24 @@
           <form method="get" name="search_filter" id="search_filter">
             {% csrf_token %}
 
+
+            <script>
+              function changeDoc(str){
+                document.getElementById('documentInput').value= str;
+              }
+
+              function changeField(str){
+                document.getElementById('fieldFormControlInput').value= str;
+              }
+            </script>
+
+
             <div class="row g-2 mt-3 mb-3">
               <div class="col-lg-2">
                 <div class="filler-job-form">
                   <i class="uil uil-clipboard-notes"></i>
-                  <select class="form-select" data-trigger name="choices-single-docs" id="choices-single-docs" aria-label="Default select example" onchange="document.getElementById('documentInput').value=this.value">
-                    <option value="all">문서번호</option>
+                  <select class="form-select" data-trigger name="choices-single-docs" id="choices-single-docs" onchange="changeDoc(this.value)">
+                    <option value="">문서번호</option>
                     {% for d in documents %}
                       <option value="{{ d.serial_num }}">{{ d.serial_num }}</option>
                     {% endfor %}
@@ -147,13 +159,12 @@
                 </div>
               </div>
 
-              <input type="hidden" id="documentInput" name="document" value="" onfocus="this.value=''" placeholder="태그 입력">
 
 
               <div class="col-lg-2">
                 <div class="filler-job-form">
                   <i class="uil uil-clipboard-notes"></i>
-                  <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" aria-label="Default select example" onchange="document.getElementById('fieldFormControlInput').value=this.value">
+                  <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" onchange="changeField(this.value)">
                     <option value="title">제목</option>
                     <option value="tag">태그</option>
                   </select>
@@ -168,6 +179,7 @@
                   <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" name="search" value="" onfocus="this.value=''" placeholder="검색어 입력" onblur="this.value=this.value.trim();">
                   <input type="hidden" class="form-control filter-job-input-box" id="tagInput" name="tag" value="{{ tag }} " onfocus="this.value=''" onblur="this.value=this.value.trim();">
 
+                  <input type="hidden" id="documentInput" name="document" value="">
                   <input type="hidden" id="fieldFormControlInput" name="field" value="title" onfocus="this.value=''" placeholder="태그 입력">
 
                 </div>
