--- a/templates/kinsdb/institution.html
+++ b/templates/kinsdb/institution.html
@@ -71,7 +71,6 @@
                 <h6 class="fs-18 mb-2">IAEA</h6>
               </a>
               <p class="text-muted mb-4">국제 원자력 기구</p>
-              <a href="{% url 'database' company='BRNC' institution='IAEA' %}" class="btn btn-primary">{{ counts.0|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -86,7 +85,6 @@
                 <h6 class="fs-18 mb-2">미국</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='미국' %}" class="btn btn-primary">{{ counts.1|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -100,7 +98,6 @@
                 <h6 class="fs-18 mb-2">스웨덴</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='스웨덴' %}" class="btn btn-primary">{{ counts.2|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -114,7 +111,6 @@
                 <h6 class="fs-18 mb-2">핀란드</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='핀란드' %}" class="btn btn-primary">{{ counts.3|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -128,7 +124,6 @@
                 <h6 class="fs-18 mb-2">프랑스</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='프랑스' %}" class="btn btn-primary">{{ counts.4|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -142,7 +137,6 @@
                 <h6 class="fs-18 mb-2">독일</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='독일' %}" class="btn btn-primary">{{ counts.5|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -156,7 +150,6 @@
                 <h6 class="fs-18 mb-2">캐나다</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='캐나다' %}" class="btn btn-primary">{{ counts.6|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -170,12 +163,13 @@
                 <h6 class="fs-18 mb-2">일본</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='BRNC' institution='일본' %}" class="btn btn-primary">{{ counts.7|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
       </div>
       <!-- end col -->
+      <button type="button" class="btn btn-primary" onclick=location.href="{% url 'database' %}">DB 보기</button>
+
     </div>
     <!--end row-->
   </div>
